# unisat

./: .cppcheck-suppressions  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITION_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  mission_config.json
.github/workflows/: ax25.yml  ci.yml  docs.yml
configurator/: README.md  configurator_app.py  requirements.txt
configurator/generators/: bom_generator.py  config_generator.py  report_generator.py
configurator/templates/: 12u_default.json  1_5u_default.json  1u_default.json  2u_default.json  3u_default.json  6u_default.json  cansat_advanced_default.json  cansat_minimal_default.json  cansat_standard_default.json
configurator/tests/: test_validators.py
configurator/validators/: mass_validator.py  power_validator.py  volume_validator.py
docker/: Dockerfile.ci  Dockerfile.configurator  Dockerfile.ground-station  Dockerfile.simulation
docs/: GAPS_AND_ROADMAP.md  OPERATIONS_GUIDE.md  README.md  REGULATORY.md  REQUIREMENTS_TRACEABILITY.md  STYLE_GUIDE.md  TECHNICAL_DOCUMENTATION.md  USAGE_GUIDE.md  architecture.md  assembly_guide.md  communication_protocol.md  link_budget.md  mass_budget.md  mission_design.md  orbit_analysis.md  power_budget.md  testing_plan.md  thermal_analysis.md
docs/adr/: ADR-001-no-csp.md  ADR-002-style-adapter.md  ADR-003-ab-keystore.md  ADR-004-replay-counter-zero-sentinel.md  ADR-005-fdir-advisory-split.md  ADR-007-hal-shim-strategy.md  (+3 more)
firmware/: CMakeLists.txt  README.md
firmware/stm32/: STM32CubeMX.ioc
firmware/stm32/ADCS/: bdot.c  bdot.h  quaternion.c  quaternion.h  sun_pointing.c  sun_pointing.h  target_pointing.c  target_pointing.h
firmware/stm32/Core/Inc/: adcs.h  ccsds.h  comm.h  command_dispatcher.h  config.h  eps.h  error_handler.h  fdir.h  fdir_persistent.h  gnss.h  key_store.h  main.h  mission_profile.h  mode_manager.h  obc.h  payload.h  sensors.h  telemetry.h  watchdog.h
firmware/stm32/Core/Src/: adcs.c  ccsds.c  comm.c  command_dispatcher.c  eps.c  error_handler.c  fdir.c  fdir_persistent.c  gnss.c  key_store.c  main.c  mode_manager.c  obc.c  payload.c  sensors.c  telemetry.c  watchdog.c
firmware/stm32/Drivers/AX25/: ax25.c  ax25.h  ax25_api.h  ax25_decoder.c  ax25_decoder.h  ax25_types.h
firmware/stm32/Drivers/BME280/: bme280.c  bme280.h
firmware/stm32/Drivers/BoardTemp/: board_temp.c  board_temp.h
firmware/stm32/Drivers/Crypto/: hmac_sha256.c  hmac_sha256.h  sha256.c  sha256.h
firmware/stm32/Drivers/LIS3MDL/: lis3mdl.c  lis3mdl.h
firmware/stm32/Drivers/MCP3008/: mcp3008.c  mcp3008.h
firmware/stm32/Drivers/MPU9250/: mpu9250.c  mpu9250.h
firmware/stm32/Drivers/SBM20/: sbm20.c  sbm20.h
firmware/stm32/Drivers/SunSensor/: sun_sensor.c  sun_sensor.h
firmware/stm32/Drivers/TMP117/: tmp117.c  tmp117.h
firmware/stm32/Drivers/UBLOX/: ublox.c  ublox.h
firmware/stm32/Drivers/VirtualUART/: virtual_uart.c  virtual_uart.h
firmware/stm32/EPS/: battery_manager.c  battery_manager.h  mppt.c  mppt.h  power_distribution.c  power_distribution.h
firmware/tests/: bench_ax25.c  test_adcs_algorithms.c  test_ax25_address.c  test_ax25_api.c  test_ax25_bitstuff.c  test_ax25_decoder.c  test_ax25_fcs.c  test_ax25_frame.c  test_ax25_golden.c  test_beacon_layout.c  test_board_temp.c  test_boot_security.c  test_ccsds.c  test_ccsds_extended.c  test_comm_integration.c  test_command_dispatcher.c  test_eps.c  test_eps_extended.c  test_error_handler.c  test_fdir.c  test_fdir_persistent.c  test_hmac.c  test_key_store.c  test_mode_manager.c  test_power_distribution.c  test_quaternion_extended.c  test_stubs.c  test_telemetry.c  test_telemetry_packers.c  test_virtual_uart_build.c
firmware/tests/unity/: unity.h
flight-software/: flight_controller.py  pyproject.toml  requirements.txt  run_cansat.py
flight-software/core/: __init__.py  event_bus.py  feature_flags.py  form_factors.py  mission_types.py  module_registry.py  state_machine.py
flight-software/core/_profiles/: __init__.py  cansat.py  cubesat.py  other.py
flight-software/modules/: README.md  __init__.py  barometric_altimeter.py  camera_handler.py  communication.py  data_logger.py  descent_controller.py  gnss_receiver.py  health_monitor.py  image_processor.py  imu_sensor.py  orbit_predictor.py  payload_interface.py  power_manager.py  safe_mode.py  scheduler.py  telemetry_manager.py
flight-software/tests/: conftest.py  test_communication_mocked.py  test_coverage_boost.py  test_data_logger.py  test_data_logger_coverage.py  test_event_bus.py  test_feature_flags.py  test_flight_controller.py  test_form_factors.py  test_gnss_receiver.py  test_health_monitor.py  test_image_processor.py  test_long_soak.py  test_mission_e2e.py  test_mission_template_roundtrip.py  test_mission_types.py  test_new_modules.py  test_new_profiles.py  test_orbit_predictor.py  test_payload_interface.py  test_power_manager.py  test_registry_orbit_image.py  test_remaining_modules.py  test_safe_mode.py  test_scheduler.py  test_scheduler_extended.py  test_state_machine.py  test_telemetry.py
ground-station/: README.md  app.py  requirements.txt
mission_templates/: README.md  cansat_advanced.json  cansat_minimal.json  cansat_standard.json  cansat_uzcansat.json  cubesat_12u.json  cubesat_1_5u.json  cubesat_1u.json  cubesat_2u.json  cubesat_3u.json  cubesat_6u.json  cubesat_sso.json  drone_survey.json  hab_standard.json  rocket_competition.json
notebooks/: ax25_live_demo.ipynb  mission_analysis.py
payloads/: README.md  payload_interface.py
scripts/: analyze_cansat_radiation.py  demo.py  flash_stm32.sh  gen_golden_vectors.py  gen_sbom.sh  gen_trace_matrix.py  generate_docs.sh  pin_docker.sh  run_cppcheck.sh  run_tests.sh  setup.sh  setup_freertos.sh  setup_stm32_hal.sh  simulate_mission.sh  sitl_fw.c  verify.sh
simulation/: README.md  analytical_solutions.py  cloud_detector.py  igrf_model.py  link_budget_calculator.py  mission_analyzer.py  ndvi_analyzer.py  orbit_simulator.py  power_simulator.py  requirements.txt  thermal_simulator.py  visualize.py
tools/: README.md  cansat_sim.py  playground.py
(+136 files in other folders)
